kubernetes-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truenas-goify
  namespace: truenas-gotify
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: truenas-gotify
  template:
    metadata:
      labels:
        app: truenas-gotify
    spec:
      containers:
      - name: truenas-gotify
        image: jwschman/truenas-gotify:main
        imagePullPolicy: Always
        ports:
        - containerPort: 31662
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 31662
          initialDelaySeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 31662
          initialDelaySeconds: 5
          periodSeconds: 10
